# dotkoke

./: .editorconfig  Cargo.toml  README.md  RELEASING.md
.github/: dependabot.yaml
.github/scripts/: lint-sh-bash.sh
.github/workflows/: config-lint.yaml  lint.yaml  release.yaml  rust.yaml
docs/: architecture.md  development.md  glossary.md  specification.md
scripts/: install.sh
src/: action.rs  add.rs  config.rs  file_collector.rs  file_kind.rs  file_operations.rs  install.rs  lib.rs  list.rs  main.rs  paths.rs  remove.rs
