[package]
authors     = ["knrew"]
description = ""
edition     = "2024"
license     = "MIT"
name        = "dotkoke"
version     = "0.1.0"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap   = {features = ["derive"], version = "4.5.48"}
serde  = {features = ["derive"], version = "1.0.228"}
toml   = "0.9.7"

[dev-dependencies]
tempfile = "3.23.0"
