[package]
authors     = ["knrew"]
description = ""
edition     = "2024"
license     = "MIT"
name        = "dotkoke"
version     = "0.1.0"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap   = {features = ["derive"], version = "4.6.1"}
serde  = {features = ["derive"], version = "1.0.228"}
toml   = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
